--- a/style.css
+++ b/style.css
@@ -4,20 +4,14 @@ body {
 }
 
 .navegador {
-    height: 60px;
-    color: black;
+    height: 70px;
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-
-.container-fluid {
-    display: flex;
+    position: sticky;
+    top: 0;
+    color: black;
     background-color: #f6feff;
-    height: 70px;
-    margin: 0;
-    padding: 10px;
-    font-size: 14px;
 }
 
 .secciones {
@@ -122,7 +116,7 @@ body {
 }
 
 .table {
-    width: 500px;
+    width: 600px;
     height: 200px;
     background-color: white;
     border: 2px solid rgb(255, 200, 200);
@@ -165,6 +159,38 @@ body {
     color: rgb(163, 0, 0);
 }
 
+.productos {
+    h5 {
+        margin-left: 30px;
+        margin-bottom: 0px;
+    }
+    p {
+        font-size: 13px;
+        margin-left: 30px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+}
+
+.grilla {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin-top: 0px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.grilla-item {
+    margin: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: rgb(255, 165, 165) 2px solid;
+    border-radius: 12px;
+    box-shadow: 5px 2px 2px rgba(241, 241, 241, 0.569);
+    background-color: rgb(255, 255, 255);
+}
+
 .newsletter h4 {
     margin-top: 0px;
     margin-bottom: 10px;
@@ -204,8 +230,29 @@ body {
     box-sizing: border-box;
 }
 
-footer {
+.contenedor-footer {
+    margin: 30px;
     display: flex;
-    justify-content: space-around;
-    margin-top: 30px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.creador {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    h6 {
+        margin-top: 5px;
+    }
+}
+
+.redes img {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 0px;
 }
