--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     border: none;
     border-radius: 20px;
     background-color: rgb(255, 165, 165);
-    box-shadow: 5px 2px 2px rgba(241, 241, 241, 0.569);
+    box-shadow: 5px 2px 2px gray;
 }
 
 .card h4 {
@@ -97,7 +97,7 @@ body {
     text-align: center;
     border-radius: 20px;
     background-color: white;
-    box-shadow: 5px 2px 2px rgba(241, 241, 241, 0.569);
+    box-shadow: 5px 2px 2px gray;
 }
 
 .sizecard img {
@@ -187,7 +187,7 @@ body {
     margin-right: 20px;
     border: rgb(255, 165, 165) 2px solid;
     border-radius: 12px;
-    box-shadow: 5px 2px 2px rgba(241, 241, 241, 0.569);
+    box-shadow: 5px 2px 2px gray;
     background-color: rgb(255, 255, 255);
 }
 
