--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body {
     background-color: rgb(246, 254, 255);
     font-family: "Noto Sans TC", sans-serif;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 nav {
     position: sticky;
     top: 0;
-    background-color: rgb(246, 254, 255)
+    background-color: rgb(246, 254, 255);
+    height: 80px;
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(59, 59, 59);
 }
 
 a:hover {
@@ -24,27 +27,24 @@ button {
     border-color: rgb(255, 97, 97);
 }
 
+.logo {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.logo h4 {
+    margin-left: 10px;
+}
+
 .navegador {
     height: 70px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: black;
-}
-
-.navegador p {
-    font-size: 15px;
-}
-
-.secciones {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    margin-left: 10px;
-}
-
-.secciones p {
-    margin-left: 20px;
+    color: rgb(59, 59, 59);
 }
 
 .buscador {
@@ -83,6 +83,15 @@ button {
     margin-left: 0;
 }
 
+.contenedor-compra {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    margin-top: 20px;
+    margin-bottom: 80px;
+}
+
 .contenido {
     width: 300px;
     border-radius: 20px;
@@ -101,7 +110,6 @@ button {
 .listado {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin: 20px;
 }
@@ -121,11 +129,13 @@ button {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 .formulario input {
     margin: 8px;
     padding: 5px;
+    margin-bottom: 15px;
 }
 
 .titulo {
@@ -151,6 +161,7 @@ button {
 
 .cart-titulo {
     text-align: center;
+    margin-bottom: 0;
 }
 
 .fondo-foto {
